<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/descripcion_label"
            android:textColor="@color/black_text"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/description_label_id" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/descripcion_diabetes"
            android:textColor="@color/black_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/description_txt_edit"
            android:padding="16dp"
            android:id="@+id/description_tv_id" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/description_label_id"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"/>

    <TextView
            android:text="@string/descripcion_label2"
            android:textColor="@color/black_text"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/description_label_2" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/description_tv_id"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"/>

    <TextView
            android:text="@string/descripcion_complicaciones"
            android:textColor="@color/black_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/description_txt_edit"
            android:padding="16dp"
            android:id="@+id/description_complicaciones" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/description_label_2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"/>



</android.support.constraint.ConstraintLayout>