<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:id="@+id/root_layout"
                                             android:layout_height="match_parent"
                                             android:layout_width="match_parent"
                                             android:background="@drawable/animate_gradient">
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="24dp"
            android:id="@+id/guideline_left"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_right" app:layout_constraintGuide_end="24dp"/>

    <ImageView
            android:layout_width="0dp"
            android:layout_height="104dp"
            android:src="@drawable/logo_img"

            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            android:layout_marginEnd="8dp" android:layout_marginTop="80dp" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/imageView"/>

    <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_text_bg"
            android:textColorHint="@color/login_form_detail"
            android:hint="@string/email_placeholder"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginTop="40dp"/>

    <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/password_placeholder"
            android:drawableRight="@drawable/ic_eye"
            android:textColorHint="@color/login_form_detail"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/username_edit_text" android:layout_marginTop="16dp"/>

    <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_string"
            android:background="@drawable/btn_background"
            android:textColor="@color/login_form_detail"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"/>

    <TextView
            android:id="@+id/forgot_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/login_form_detail"
            android:text="@string/forgot_placeholder"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            android:layout_marginTop="16dp"
    />
    <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:id="@+id/divisor" app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="@+id/guideline_left"
            android:layout_marginStart="32dp" app:layout_constraintTop_toBottomOf="@+id/forgot_password"
            android:layout_marginTop="8dp"
            android:background="@color/login_form_detail"
    />
    <TextView
            android:text="@string/signup_placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/login_form_detail"
            android:id="@+id/sign_up"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/divisor"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
    />


</android.support.constraint.ConstraintLayout>